--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,19 @@
 {
+  "scopedRegistries": [
+    {
+      "name": "NatML",
+      "url": "https://registry.npmjs.com",
+      "scopes": ["api.natsuite"]
+    }
+  ],
   "dependencies": {
     "com.unity.cinemachine": "2.8.2",
     "com.unity.collab-proxy": "1.13.5",
     "com.unity.ide.rider": "3.0.7",
     "com.unity.ide.visualstudio": "2.0.11",
     "com.unity.ide.vscode": "1.2.4",
+    "com.unity.ml-agents": "file:D:/UP/ml-agents-release_18/com.unity.ml-agents",
+    "com.unity.ml-agents.extensions": "file:D:/UP/ml-agents-release_18/com.unity.ml-agents.extensions",
     "com.unity.test-framework": "1.1.29",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.2",
@@ -40,6 +49,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "api.natsuite.natml": "1.0.6"
   }
 }
